[package]
name = "wtools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
windows = { version = "0.58.0", features = [
  "Win32",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Console",
  "Win32_UI_Input_KeyboardAndMouse",
] }
winvd = "0.0.46"
